# DocuFlow

./: .gitignore  CUDA_FIX_README.md  README.md  demo_table_extraction.py  fix_cuda_msda.py  pyproject.toml  run.py  set_docling_env.bat  test_config.py  test_docling.py
documentation/: APPLICATION_OVERVIEW.md  README.md  RESEARCH.md
documentation/getting_started/: quick_start.md
documentation/modules/: table_extraction.md
src/docuflow/: __init__.py  config.py
src/docuflow/api/: main.py
src/docuflow/api/routes/: documents.py
src/docuflow/config/: config.py
src/docuflow/ingestion/: service.py
src/docuflow/models/: document.py
src/docuflow/parsing/: __init__.py  service.py
src/docuflow/table_extraction/: __init__.py  ai_driven.py  base.py  docling_driven.py  rule_based.py  service.py
src/docuflow/table_extraction/models/: table.py
test_files/tables/: create_sample_tables.py  generate_all_tables.py
tests/: conftest.py  test_ai_table_extraction.py  test_api.py  test_docling_table_extraction.py  test_ingestion.py  test_models.py  test_parser.py  test_parsing.py  test_rule_based_extraction.py  test_table_extraction.py
