[project]
name = "docuflow"
version = "0.1.0"
description = "A scalable document ingestion pipeline for extracting and structuring data from diverse document types"
authors = [
    {name = "openhands",email = "openhands@all-hands.dev"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "elasticsearch (>=8.17.1,<9.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.1.0,<12.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-magic (>=0.4.27,<0.5.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
