[tool.poetry]
name = "docuflow"
version = "0.1.0"
description = "A scalable document ingestion pipeline for extracting and structuring data from diverse document types"
authors = ["openhands <openhands@all-hands.dev>"]
readme = "README.md"
packages = [{ include = "docuflow", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.9,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
elasticsearch = ">=8.17.1,<9.0.0"
neo4j = ">=5.28.1,<6.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
pydantic = ">=2.10.6,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
python-multipart = ">=0.0.20,<0.0.21"
pillow = ">=11.1.0,<12.0.0"
pdf2image = ">=1.17.0,<2.0.0"
python-magic = ">=0.4.27,<0.5.0"
docling = ">=2.25.0,<3.0.0"
pandas = ">=2.2.1,<3.0.0"  # For table data handling
reportlab = ">=4.1.0,<5.0.0"  # For test PDF generation
torch = {version = ">=2.2.0,<3.0.0", source = "pytorch"}
flash-attn = ">=2.7.4,<3.0.0"
einops = ">=0.8.1,<0.9.0"  # Required by flash-attention

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
aiofiles = "^24.1.0"
reportlab = "^4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"